--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Wesley C</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
 
-  <div id = "main">
-
+<script id="project-template" type="x-handlebars-template">
+  <div class="project">
+    <h2> {{name}} </h2>
+    <img src="{{thumbnail_url}}" />
+    <p>{{description}}</p>
+    <p><a href="{{github_url}}"> Code on Github</a>
+    <p><a href="{{live_url}}" >Live Demo</a>
   </div>
+</script>
 
-  <script type="text/javascript" src="main.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-  <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
-  <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
-  <script src="https:////cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"type="text/javascript"></script>
+<script id="projects-template" type="x-handlebars-template">
+  <div class="projects">
+  {{#each projects}}
+    {{>project}}
+    {{/each}}
+    </div>
+</script>
+
+<div id="main">
+</div>
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+<script src="https:////cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"type="text/javascript"></script>
+<script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
+<script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
+<script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
