--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     </div>
 </script>
 
+<script id="appView-template" type="x-handlebars-template">
+  <h1>Projects</h1>
+  <ul id="project-list">
+  </ul>
+</script>
+
 <div id="main">
 </div>
 
